# BipLogAnalazyer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.bat
.github/workflows/: parse-logs.yml
data/: consumables.json  phases.json
docs/: app.js  data.json  index.html  style.css
log_analyzer/: analyze.py  cli.py  config.py  consumables.py  excel_export.py  json_export.py  wcl_client.py
scripts/: capture_fixtures.py
sources/: General.gs  PullAllGear.gs  consumables.gs  drums.gs  fights.gs  filtering.gs  helper.gs  rpb.gs  shadowResistance.gs  validate.gs
